# ose

./: .vampire  CHANGES  COPYING  INSTALL  Makefile  README  _links.py  _masthead.py  bsd-license.txt  changes.txt  index.txt  index_sidebar.txt  install.txt  license.txt  qpl-license.txt
config/: Makefile  Makefile.in  OSE-CONFIG.h.in  configure  configure.in  init.mk  modules.mk
config/ALPHA_DIGITAL/: ALPHA_DIGITAL-SAMPLE.mk  Makefile  OSE-CONFIG.h
config/ALPHA_LINUX/: Makefile
config/GENERIC/: Makefile
config/HPPA_HPUX/: HPPA_HPUX-SAMPLE.mk  HPPA_HPUX.mk  Makefile  OSE-CONFIG.h
config/MIPS_IRIX/: MIPS_IRIX-SAMPLE.mk  Makefile  OSE-CONFIG.h
config/MIPS_RELIANT/: MIPS_RELIANT-SAMPLE.mk  Makefile  OSE-CONFIG.h
config/POWER_AIX/: Makefile  OSE-CONFIG.h  POWER_AIX-SAMPLE.mk  POWER_LYNX-SAMPLE.mk
config/POWER_LYNX/: Makefile  OSE-CONFIG.h
config/POWER_MACOSX/: Makefile  POWER_MACOSX-SAMPLE.mk  python-defns.mk  python-options.mk
config/RS6000_AIX/: Makefile
config/RS6000_LINUX/: Makefile  RS6000_LINUX-SAMPLE.mk
config/SPARC_LINUX/: Makefile  python-options.mk
config/SPARC_SOLARIS/: Makefile  SPARC_SOLARIS-SAMPLE.mk  python-options.mk
config/X86_BSDI/: Makefile  OSE-CONFIG.h  X86_BSDI-SAMPLE.mk
config/X86_CYGWIN32/: Makefile  OSE-CONFIG.h  X86_CYGWIN32-SAMPLE.mk  python-options.mk
config/X86_FREEBSD/: Makefile  OSE-CONFIG.h  X86_FREEBSD-SAMPLE.mk  python-options.mk
config/X86_LINUX/: Makefile  OSE-CONFIG.h  X86_LINUX-SAMPLE.mk  python-options.mk
config/X86_NETBSD/: Makefile  OSE-CONFIG.h  X86_NETBSD-SAMPLE.mk
config/X86_SCO/: Makefile  OSE-CONFIG.h  X86_SCO-SAMPLE.mk
config/X86_SOLARIS/: Makefile  OSE-CONFIG.h  X86_SOLARIS-SAMPLE.mk
config/X86_UNIXWARE/: Makefile  X86_UNIXWARE-SAMPLE.mk
config/X86_WIN32/: Makefile  OSE-CONFIG.h  X86_WIN32-SAMPLE.mk  python-options.mk  tcl-defns.mk  tcl-options.mk
demos/agent/: action-callbacks.py  alarm-callbacks.py  job-scheduling.py  signal-callbacks.py  timeout-callbacks.py
demos/database/: database-client.py  database-netrpc.py  database-service.py
demos/debug/: README  logger.py  logmon-service.py
demos/internet/: client-authorisation.py  custom-web-server.py  html-form-servlet.py  script-web-server.py  simple-web-server.py  user-authorisation.py
demos/netrpc/: DEPS.mk  Makefile  README  introspection-client.py  introspection-service.py  transient-service.py  validator-client.py  validator-service.cc  validator-service.py
demos/service/: DEPS.mk  Makefile  README  exchange-network.cc  exchange.cc  message.py  netrpc-gateway.cc  netrpc-gateway.py  publish-backend.cc  publish-frontend.cc  publish-subscribe.cc  publish.cc  publish.py  reply.cc  reply.py  request-multiply.cc  request-reply.cc  request-reply.py  request-uptime.cc  request-uptime.py  soap-gateway.py  subscribe.cc  subscribe.py  xmlrpc-gateway.py
demos/socket/: Makefile  README  chargen-server.cc  daytime-server.cc  echo-server.cc  proxy-client.py  proxy-service.py  read-client.cc  write-client.cc
demos/thread/: DEPS.mk  Makefile  README  agent-threading.cc  simple-threading.cc
include/: Makefile  OSE-VERSION.h
include/OSE/: Makefile  OSE.h
include/OTC/: AVLHashTableNode.hh  AVLLinkNode.hh  AVLNode.hh  AVLTree.hh  AVLTreeNode.hh  Action.hh  Agent.hh  Alarm.hh  Alignment.hh  Anchor.hh  Arena.hh  Array.hh  AscendingQueue.hh  Bag.hh  BaseActions.hh  BitSet.hh  BitSetC.hh  BoundedQueue.hh  BoundedStack.hh  Bucket.hh  CBitSet.hh  CCtrPtr.hh  CCtrVecPtr.hh  CResPtr.hh  CString.hh  CVMutex.hh  Cluster.hh  Collection.hh  CommonPool.hh  Condition.hh  ConfigDatabase.hh  Congestion.hh  Connection.hh  CopyActions.hh  CtrPtr.hh  CtrVecPtr.hh  Cursor.hh  DOMNode.hh  DOMProperty.hh  DOMString.hh  (+180 more)
include/OUX/: Directory.hh  JobQueue.hh  Makefile  Pathname.hh  Program.hh  Signal.hh  SignalBlock.hh  SignalHandler.hh  Stat.hh
include/makeit/: Makefile  TODO  all.mk  c.mk  cc.mk  check.mk  clean.mk  combine.mk  compiler.mk  depend.mk  qt.mk  (+23 more)
layouts/: skidoo.py
lib/: Makefile
macosx/: INSTALL
python/: DEPS.mk  Makefile  otcpyloader.cc  setup.py  spyon.py  spyon.sh
software/: Makefile  PACKAGE  aclocal.m4  configure  configure.ac  settings.mk  setup.mk  setup.py
software/include/: Doxyfile
software/include/ONS/agent/: agent.hh  agntextn.hh  exectecb.hh  mntrextn.hh  monitor.hh  servextn.hh  service.hh
software/include/OSE/: compile.h  config.h.in  i386-pc-win32.h  version.h
software/include/OTC/: OTC.h
software/include/OTC/collctn/: applcatr.hh  bucket.hh  hindex.hh  hindexen.hh  holder.hh  mlstiter.hh  mlstmdfr.hh  prbucket.hh  prvisitr.hh  prworker.hh  tindex.hh  tindexen.hh  visitor.hh  worker.hh
software/include/OTC/debug/: tracer.hh
software/include/OTC/dispatch/: dispatch.hh  job.hh  joblist.hh  jobqueue.hh  receiver.hh  ropyload.hh
software/include/OTC/internet/: httpdaem.hh  jsongtwy.hh  jsonsrvl.hh  rpcgtway.hh  rpcsrvlt.hh  xmlrpcgw.hh  xmlrpcsl.hh
software/include/OTC/memory/: mcobject.hh  ptr.hh  reaper.hh  vcreaper.hh  vecptr.hh
software/include/OTC/message/: eplisten.hh  eprgstry.hh  exchange.hh  inetaddr.hh  unixaddr.hh
software/include/OTC/thread/: mxreaper.hh  rwmutex.hh
software/netrpc/: common.py  remote.py
software/netsvc/: __init__.py
software/netsvc/cache/: __init__.py
software/netsvc/client/: __init__.py
software/netsvc/json/: __init__.py
software/python/: agent.hh  dispatch.hh  echosrvl.hh  exchange.hh  filesrvl.hh  filesrvr.hh  httpdaem.hh  httpsrvl.hh  httpsrvr.hh  job.hh  jsongtwy.hh  jsonsrvl.hh  logger.hh  opyagent.cc  opydispatch.cc  opyechosrvl.cc  opyexchange.cc  opyfilesrvl.cc  opyfilesrvr.cc  opyhttpdaem.cc  opyhttpsrvl.cc  opyhttpsrvr.cc  opyjob.cc  opyjsongtwy.cc  opyjsonsrvl.cc  opylogger.cc  opymodule.cc  opymonitor.cc  opyrequest.cc  opyrpcgtway.cc  opyrpcsrvlt.cc  opyservice.cc  opyxmlrpcgw.cc  opyxmlrpcsl.cc  request.hh  rpcgtway.hh  rpcsrvlt.hh  xmlrpcgw.hh  xmlrpcsl.hh
software/win32/: objects.mk  rules.mk
tests/: Makefile  README
win32/: ARFLAGS.LST  BC.MAK  CFLAGS.LST  INSTALL.BC  INSTALL.MS  INSTALL.MS-PYTHON  INSTALL.WC  MS-PYTHON.MAK  MS.MAK  WC.MAK
(+863 files in other folders)
