AC_INIT([[OSE-CONFIG.h.in]])

CONFIG_HEADERS=["OSE-CONFIG.h"]
export CONFIG_HEADERS
AC_SUBST(CONFIG_HEADERS)
AC_CONFIG_HEADER($CONFIG_HEADERS)

AC_PROG_CPP

AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV

AC_HEADER_DIRENT

AC_CHECK_HEADERS(windows.h)

AC_CHECK_HEADERS(memory.h)
AC_CHECK_HEADERS(stropts.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/resource.h)
AC_CHECK_HEADERS(sys/elf.h)
AC_CHECK_HEADERS(sys/select.h)
AC_CHECK_HEADERS(sys/param.h)

AC_CHECK_FUNCS(getcwd)
AC_CHECK_FUNCS(getdtablesize)
AC_CHECK_FUNCS(getpid)
AC_CHECK_FUNCS(gettimeofday)
AC_CHECK_FUNCS(getwd)
AC_CHECK_FUNCS(nl_langinfo)
AC_CHECK_FUNCS(poll)
AC_CHECK_FUNCS(select)
AC_CHECK_FUNCS(sigprocmask)
AC_CHECK_FUNCS(sigaction)
AC_CHECK_FUNCS(sysconf)
AC_CHECK_FUNCS(uname)

AC_FUNC_STRCOLL

AC_MSG_CHECKING(for sysconf (_SC_OPEN_MAX))
AC_CACHE_VAL(my_cv_sysconf_sc_open_max, [dnl
AC_TRY_LINK([#include <unistd.h>], [int max = sysconf (_SC_OPEN_MAX);],
            [my_cv_sysconf_sc_open_max=yes], [my_cv_sysconf_sc_open_max=no])])
if test $my_cv_sysconf_sc_open_max = yes; then
  AC_DEFINE(HAVE_SYSCONF_SC_OPEN_MAX)
fi
AC_MSG_RESULT($my_cv_sysconf_sc_open_max)

AC_DEFUN(MY_SUBST_TYPE,
[AC_MSG_CHECKING([for $1])
AC_CACHE_VAL(my_cv_type_$1,
changequote(,)dnl
trfrom='[a-z]' trto='[A-Z]'
changequote([,])dnl
AC_HEADER_EGREP($1, sys/types.h,
eval "my_cv_type_$1=yes",
eval "my_cv_type_$1=no"
))
if eval "test \"`echo '$my_cv_type_'$1`\" = yes"; then
  AC_MSG_RESULT(yes)
  ifelse([$2], , :, [$2])
else
  AC_MSG_RESULT(no)
  ifelse([$3], , , [$3])
fi
])

AC_DEFUN(MY_SUBST_TYPES,
[for my_type in $1
do
MY_SUBST_TYPE($my_type,$2,
[changequote(, )dnl
  my_tr_type=NEED_`echo $my_type | tr '[a-z]' '[A-Z]'`
changequote([, ])dnl
  AC_DEFINE_UNQUOTED($my_tr_type)] $3)dnl
done
])

MY_SUBST_TYPES(uid_t)
MY_SUBST_TYPES(pid_t)
MY_SUBST_TYPES(off_t)
MY_SUBST_TYPES(dev_t)
MY_SUBST_TYPES(ino_t)
MY_SUBST_TYPES(u_char)
MY_SUBST_TYPES(u_short)
MY_SUBST_TYPES(u_int)
MY_SUBST_TYPES(u_long)

AC_OUTPUT()

[if test "$OSE_HOST" = ""; then
  echo
  echo "OSE_HOST environment variable not set".
  echo
  exit 1
fi]

[if test ! -d $OSE_HOST; then
  echo
  echo "Hmmm.... first time on this system"
  echo
  echo "mkdir $OSE_HOST"
  mkdir $OSE_HOST
  echo "cp GENERIC/GENERIC.mk $OSE_HOST/$OSE_HOST.mk"
  cp GENERIC/GENERIC.mk $OSE_HOST/$OSE_HOST.mk
  echo "cp GENERIC/GENERIC-SAMPLE.mk $OSE_HOST/$OSE_HOST-SAMPLE.mk"
  cp GENERIC/GENERIC-SAMPLE.mk $OSE_HOST/$OSE_HOST-SAMPLE.mk
  echo "cat Makefile.in | sed -e 's/@SUBDIR@/$OSE_HOST/' > $OSE_HOST/Makefile"
  cat Makefile.in | sed -e 's/@SUBDIR@/$OSE_HOST/' > $OSE_HOST/Makefile
  echo
fi]

[test -f OSE-CONFIG.h && echo mv OSE-CONFIG.h $OSE_HOST/OSE-CONFIG.h]
[test -f OSE-CONFIG.h && mv OSE-CONFIG.h $OSE_HOST/OSE-CONFIG.h]

[test -f config.cache && echo mv config.cache $OSE_HOST/config.cache]
[test -f config.cache && cp config.cache $OSE_HOST/config.cache]
[test -f config.cache && rm config.cache]

[test -f config.log && echo mv config.log $OSE_HOST/config.log]
[test -f config.log && cp config.log $OSE_HOST/config.log]
[test -f config.log && rm config.log]

[test -f config.status && rm config.status]
